@@ -1,3 +1,8 @@
+2002-12-24  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/add_window.c (GetWindowSizeHints):  Change hint warning message
+	so we won't get so many application bugs report to fvwm-workers.
+
 2002-12-03  Mikhael Goikhman  <migo@homemail.com>
 
 	* configure.in:
